import {act, render, renderHook, screen} from "@testing-library/react";
import Banner from "./Banner";
import useBannerHook from "./BannerHook";

describe("Banner Hook 테스트", () => {
  jest.useFakeTimers();
  jest.spyOn(window, "setInterval");
  jest.spyOn(window, "clearInterval");

  afterEach(() => {
    jest.clearAllMocks();
  });
  it("setInterval test", () => {
    const {result} = renderHook(() => useBannerHook());
    act(() => {
      jest.advanceTimersByTime(8000);
    });
    expect(result.current.carouselNumber).toBe(1);
  });
});

describe("Banner Presentational 테스트", () => {
  const bannerDataMock = {
    content: [
      {
        backgroundColor: "blue",
        title: "자신의 취향에 맞는장소를\n MyPlace 에서 찾아보세요",
        summary: "해시태그, 키워드를 활용하여\n 원하는 장소를 검색해보세요",
        router: "/findplace",
        img: "/slide/slide0_jlhmsf.svg",
      },
      {
        backgroundColor: "purple",
        title: "장소에 관한 이야기를\n 커뮤니티에서 나누어보세요",
        summary: "다양한 사람들과\n 장소에 관한 이야기를 나눌수 있습니다",
        router: "/community/postlist",
        img: "/slide/slide1_ysk06a.svg",
      },
      {
        backgroundColor: "green",
        title: "자신이 알고있는 장소를\n 다른사람과 공유하기",
        summary:
          "장소에 대한 정보를 제공하는것은\n 사이트 발전에 도움이 됩니다",
        router: "/contribute/addstoreposition",
        img: "/slide/slide2_jckgbi.svg",
      },
    ],
    error: false,
  };
  it("0번 배너 렌더링", () => {
    const utils = render(
      <Banner carouselNumber={0} bannerData={bannerDataMock} />
    );
    screen.getByTestId("carousel0");
    expect(utils.container).toMatchSnapshot();
  });

  it("1번 배너 렌더링", () => {
    const utils = render(
      <Banner carouselNumber={1} bannerData={bannerDataMock} />
    );
    screen.getByTestId("carousel1");
    expect(utils.container).toMatchSnapshot();
  });

  it("2번 배너 렌더링", () => {
    const utils = render(
      <Banner carouselNumber={2} bannerData={bannerDataMock} />
    );
    screen.getByTestId("carousel2");
    expect(utils.container).toMatchSnapshot();
  });
});
